# pan-os-upgrade-assurance

./: .flake8  .gitignore  .releaserc  Dockerfile  Makefile  README.md  coverage.xml  pua-ee.yml  pydoc-markdown.yml  pyproject.toml  requirements-docs.txt
.github/: CODEOWNERS  dependabot.yml
.github/actions/artifact_docs/: action.yml
.github/actions/build_image/: action.yml
.github/actions/discover_python_version/: action.yml
.github/actions/docs_tests/: action.yml
.github/actions/pandev_pr/: action.yml
.github/actions/sca/: action.yml
.github/actions/unit_tests/: action.yml
.github/workflows/: _discover_python_ver.yml  _docker.yml  close_pr.yml  close_pr_workflow_run.yml  docker.yml  lint_pr_title.yml  ok-to-test.yml  pr.yml  pr_workflow_run.yml  publish_ansible_ee_image.yml  publish_docker_image.yml  publish_documentation.yml  publish_python_package.yml  release.yml  sub_docs.yml  sub_format.yml  sub_pandev.yml  sub_unittest.yml
docker_image/: Dockerfile  build.sh
docs/: api.rst  building_docs.md  building_docs.rst  conf.py  configuration_details.md  configuration_details.rst  index.rst  usage.rst
docs/_build/doctrees/: api.doctree  building_docs.doctree  configuration_details.doctree  environment.pickle  index.doctree  installation.doctree  overview.doctree  usage.doctree
docs/_build/html/: .buildinfo  api.html  building_docs.html  configuration_details.html  genindex.html  index.html  installation.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/panos_upgrade_assurance/: check_firewall.html  firewall_proxy.html  snapshot_compare.html  utils.html
docs/_build/html/_sources/: configuration_details.rst.txt  installation.rst.txt  overview.rst.txt
docs/docs/: configuration_details.mdx  overview.mdx  usage_examples.mdx
docs/docs/api/: check_firewall.md  firewall_proxy.md  snapshot_compare.md  utils.md
docs/panos-upgrade-assurance/: configuration_details.mdx
docs/panos-upgrade-assurance/api/: check_firewall.md  errors.md  exceptions.md  firewall_proxy.md  snapshot_compare.md  utils.md
docs_markdown/: building_docs.md  building_docs.mdx  configuration_details.md  configuration_details.mdx  dialect.md  dialect.mdx  index.mdx  installation.md  installation.mdx  overview.md  overview.mdx  usage.mdx
docs_markdown/api/: check_firewall.md  firewall_proxy.md  sidebar.json  snapshot_compare.md  utils.md
examples/: README.md
examples/low_level_methods/: run_low_level_methods.py
examples/readiness_checks/: run_health_checks.py  run_readiness_checks.py  run_readiness_snapshot.py
examples/report/: fw1.snapshot  fw2.snapshot  lic-5.json  lic-6.json  snapshot_load_compare.py
panos_upgrade_assurance/: __init__.py  check_firewall.py  errors.py  exceptions.py  firewall_proxy.py  snapshot_compare.py  utils.py
tests/: snapshots.py  test_check_firewall.py  test_firewall_proxy.py  test_snapshot_compare.py  test_utils.py
