[tool.poetry]
name = "panos-upgrade-assurance"
version = "0.0.1"
description = ""
authors = ["Palo Alto Networks"]
readme = "README.md"
packages = [
    { include = "panos_upgrade_assurance" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.project.urls]
"Homepage" = "https://github.com/PaloAltoNetworks/pan-os-upgrade-assurance"
"Bug Tracker" = "https://github.com/PaloAltoNetworks/pan-os-upgrade-assurance/issues"

[tool.poetry.dependencies]
python = "^3.8.1"
pan-os-python = "^1.8"
pan-python = "^0.17"
xmltodict = "^0.13"

[tool.poetry.group.dev.dependencies]
pydoc-markdown = "^4.6"
flake8 = "^6.0"
black = "^23.3"
bandit = "^1.7"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["docs", ".venv", ".github", "docker_image", "dist"]
skips = ["B405"]
